tests/ui/pattern/rfc-3627-match-ergonomics-2024/experimental/pattern-errors.classic2024.stderr
error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:16:17
   |
LL |     if let Some(&mut x) = &Some(&mut 0) {
   |                 ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     if let Some(&mut x) = &Some(&mut 0) {
LL +     if let Some(&x) = &Some(&mut 0) {
   |

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:22:17
   |
LL |     if let Some(&mut Some(&x)) = &Some(&mut Some(0)) {
   |                 ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     if let Some(&mut Some(&x)) = &Some(&mut Some(0)) {
LL +     if let Some(&Some(&x)) = &Some(&mut Some(0)) {
   |

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:28:22
   |
LL |     if let Some(Some(&mut x)) = &Some(Some(&mut 0)) {
   |                      ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     if let Some(Some(&mut x)) = &Some(Some(&mut 0)) {
LL +     if let Some(Some(&x)) = &Some(Some(&mut 0)) {
   |

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:35:17
   |
LL |     if let Some(&mut Some(&_)) = &Some(&Some(0)) {
   |                 ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     if let Some(&mut Some(&_)) = &Some(&Some(0)) {
LL +     if let Some(&Some(&_)) = &Some(&Some(0)) {
   |

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:47:23
   |
LL |     if let Some(&Some(&mut _)) = &mut Some(&Some(0)) {
   |                       ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     if let Some(&Some(&mut _)) = &mut Some(&Some(0)) {
LL +     if let Some(&Some(&_)) = &mut Some(&Some(0)) {
   |

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:58:17
   |
LL |     if let Some(&mut Some(x)) = &Some(Some(0)) {
   |                 ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     if let Some(&mut Some(x)) = &Some(Some(0)) {
LL +     if let Some(&Some(x)) = &Some(Some(0)) {
   |

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:160:10
   |
LL |     let [&mut x] = &[&mut 0];
   |          ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     let [&mut x] = &[&mut 0];
LL +     let [&x] = &[&mut 0];
   |

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:166:10
   |
LL |     let [&mut &x] = &[&mut 0];
   |          ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     let [&mut &x] = &[&mut 0];
LL +     let [&&x] = &[&mut 0];
   |

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:172:10
   |
LL |     let [&mut &ref x] = &[&mut 0];
   |          ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     let [&mut &ref x] = &[&mut 0];
LL +     let [&&ref x] = &[&mut 0];
   |

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:178:10
   |
LL |     let [&mut &(mut x)] = &[&mut 0];
   |          ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     let [&mut &(mut x)] = &[&mut 0];
LL +     let [&&(mut x)] = &[&mut 0];
   |

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.
